Made background-color for iframe transparent, FF & IE fix, otherwise iframe isn't visible

--- a/src/editions/downloadlibx2.css
+++ b/src/editions/downloadlibx2.css
@@ -180,6 +180,10 @@ list-style:none;
   padding: 2px;
 }
 
+.popup-iframe {
+  background-color: transparent;
+}
+
 .demo-iframe-close {
   display: none;
   margin-top: 35px;
